// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AutoComplete Should render Autocomplete 1`] = `
.InputLabel-module__input-label___u-ovg {
  color: inherit;
  display: block;
  font-weight: 700;
  margin: var(--qtm-spacing-xsmall) 0 0;
}

.TextInput-module__text-input___VCylJ {
  -webkit-appearance: none;
  background-color: var(--qtm-colors-neutral-0);
  border: 2px solid var(--qtm-colors-neutral-500);
  border-radius: 4px;
  box-sizing: border-box;
  color: var(--qtm-colors-neutral-700);
  font-size: medium;
  letter-spacing: .2px;
  margin-top: 0;
  outline: none;
  padding: var(--qtm-spacing-xsmall) var(--qtm-spacing-medium);
  transition: all .2s ease-in-out;
  width: 100%;
}

.AutoComplete-module__wrapper___0v99I {
  color: var(--qtm-colors-neutral-700);
}

.AutoComplete-module__input-wrapper___Yz9qd,
.AutoComplete-module__wrapper___0v99I {
  position: relative;
}

.AutoComplete-module__input-text___8DYxo {
  margin-top: var(--qtm-spacing-xsmall);
}

.AutoComplete-module__polite-status___DWMsJ {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

<div
  class="AutoComplete-module__wrapper___0v99I"
>
  <div
    class="AutoComplete-module__input-wrapper___Yz9qd"
  >
    <label
      class="InputLabel-module__input-label___u-ovg"
      for=""
    />
    <input
      aria-autocomplete="both"
      aria-expanded="false"
      aria-owns="autocompleteOptions"
      autocomplete="off"
      class="TextInput-module__text-input___VCylJ AutoComplete-module__input-text___8DYxo"
      id=""
      name=""
      placeholder="Select an option"
      role="combobox"
      style="--icon-size: var(--qtm-spacing-large); --icon-area: calc(var(--qtm-spacing-medium) + var(--icon-size) + var(--qtm-spacing-xsmall));"
      type="text"
      value=""
    />
  </div>
  <div
    aria-atomic="true"
    aria-live="polite"
    class="AutoComplete-module__polite-status___DWMsJ"
    role="status"
  >
    Digite uma ou mais letras para expandir os resultados. 5 estão disponiveis.
  </div>
</div>
`;

exports[`AutoComplete Should render Autocomplete with dark skin 1`] = `
.InputLabel-module__input-label___u-ovg {
  color: inherit;
  display: block;
  font-weight: 700;
  margin: var(--qtm-spacing-xsmall) 0 0;
}

.TextInput-module__text-input___VCylJ {
  -webkit-appearance: none;
  background-color: var(--qtm-colors-neutral-0);
  border: 2px solid var(--qtm-colors-neutral-500);
  border-radius: 4px;
  box-sizing: border-box;
  color: var(--qtm-colors-neutral-700);
  font-size: medium;
  letter-spacing: .2px;
  margin-top: 0;
  outline: none;
  padding: var(--qtm-spacing-xsmall) var(--qtm-spacing-medium);
  transition: all .2s ease-in-out;
  width: 100%;
}

.TextInput-module__text-input-dark___TrWzt {
  background-color: rgba(0,0,0,.7)!important;
  border: 2px solid transparent;
  color: var(--qtm-colors-neutral-0);
}

.AutoComplete-module__wrapper___0v99I {
  color: var(--qtm-colors-neutral-700);
}

.AutoComplete-module__input-wrapper___Yz9qd,
.AutoComplete-module__wrapper___0v99I {
  position: relative;
}

.AutoComplete-module__wrapper-dark___PndN8 {
  color: var(--qtm-colors-neutral-0);
}

.AutoComplete-module__input-text___8DYxo {
  margin-top: var(--qtm-spacing-xsmall);
}

.AutoComplete-module__polite-status___DWMsJ {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

<div
  class="AutoComplete-module__wrapper___0v99I AutoComplete-module__wrapper-dark___PndN8"
>
  <div
    class="AutoComplete-module__input-wrapper___Yz9qd"
  >
    <label
      class="InputLabel-module__input-label___u-ovg"
      for=""
    />
    <input
      aria-autocomplete="both"
      aria-expanded="false"
      aria-owns="autocompleteOptions"
      autocomplete="off"
      class="TextInput-module__text-input___VCylJ TextInput-module__text-input-dark___TrWzt AutoComplete-module__input-text___8DYxo"
      id=""
      name=""
      placeholder="Select an option"
      role="combobox"
      style="--icon-size: var(--qtm-spacing-large); --icon-area: calc(var(--qtm-spacing-medium) + var(--icon-size) + var(--qtm-spacing-xsmall));"
      type="text"
      value=""
    />
  </div>
  <div
    aria-atomic="true"
    aria-live="polite"
    class="AutoComplete-module__polite-status___DWMsJ"
    role="status"
  >
    Digite uma ou mais letras para expandir os resultados. 5 estão disponiveis.
  </div>
</div>
`;
